--- a/build
+++ b/build
@@ -1,1 +1,1 @@
-ocamlbuild -Is storage -cflag -annot -tag debug -verbose 6 -use-menhir -tag thread -use-ocamlfind -quiet -pkg extlib -pkg str -pkg async -pkg email_message -pkg async_unix -pkg async_kernel imaplet.native
+corebuild -Is storage -cflag -annot -tag debug -verbose 6 -use-menhir -tag thread -use-ocamlfind -quiet -package extlib,str,async,email_message,async_unix,async_kernel,sexplib imaplet.native
